--- a/Untitled1.html
+++ b/Untitled1.html
@@ -12,7 +12,7 @@
      <br> algunos con chip, todos ellos listos y con la esperanza de ser adoptados.</h4></center>
 
      <center><h1>Estos son nuestros gatos en busca de familia</h1></center>
-     <img src="images/Gara.jpg">
+     <img src="Gara.jpg">
      <center><h4>Gara</h4></center>
      
      <center><h4>Ramsés</h4></center>
