--- a/perros.html
+++ b/perros.html
@@ -18,6 +18,8 @@ En esta ONG es primordial el cuidado de nuestros peludos y hoy
 <br>-Integrante2:Diego Apablaza
 <br>-Integrante3:Martin Trujillo</center>
 <center><h2>Nuestras secciones de ayuda:</h2></center>
+<img src="gato1_1ga.png" width="250" 
+height="250"/> 
 
 <body>
     
